--- a/cursojs/exercicios/aula12ex/ex015/style.css
+++ b/cursojs/exercicios/aula12ex/ex015/style.css
@@ -17,6 +17,43 @@ section{
     width: 500px;
     margin: 0 auto;
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.432);
+
+    & #info{
+        padding: 10px;        
+        text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.445); 
+
+        /* Firefox */
+        & input[type=number]{
+            -moz-appearance: textfield;  
+            width: 60px;       
+            border: 2px solid rgba(88, 88, 247, 0.61); 
+            border-radius: 5px;
+            text-align: center;
+            font-size: 0.7em;
+            margin: 10px; 
+            
+        }
+        /* Google */
+        & input[type=number]::-webkit-inner-spin-button{
+            -webkit-appearance: none;            
+        }
+
+        & input[type=radio]{
+            margin-bottom: 15px;
+        }
+        & input[type=button]{
+            width: 100%;            
+            padding: 10px;
+            border-radius: 10px;
+            border: 2px solid rgba(88, 88, 247, 0.6);
+            font-size: 0.8em;
+        }
+    }
+
+    & #result{
+        padding: 10px;
+        text-align: center;
+    }
 }
 footer{
     text-align: center;
