--- a/cursojs/exercicios/aula14ex/ex016/style.css
+++ b/cursojs/exercicios/aula14ex/ex016/style.css
@@ -17,6 +17,32 @@ section{
     width: 500px;
     margin: 0 auto;
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.432);
+
+    & #div1{        
+        display: flex;
+        flex-direction: column;
+                    
+        & input[type=number]{            
+            padding: 5px;
+            border-radius: 10px;
+            border: 1px solid rgba(0, 0, 0, 0.356);
+            
+        }
+    }
+    & .txt{
+        margin-bottom: 10px;              
+    }
+    & #btn_contar{
+        height: 30px;
+        font-size: .7em;
+        font-weight: bold;
+        border-radius: 10px; 
+        border: 1px solid rgba(0, 0, 0, 0.356);
+        margin: 20px 0px 30px 0;
+    }
+    & #txtcont{
+        font-size: .9em;
+    }
 }
 footer{
     text-align: center;
