--- a/cursojs/exercicios/aula14ex/ex016/style.css
+++ b/cursojs/exercicios/aula14ex/ex016/style.css
@@ -14,7 +14,7 @@ section{
     background-color: white;
     border-radius: 10px;
     padding: 15px;
-    width: 500px;
+    width: 50vw;
     margin: 0 auto;
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.432);
 
