--- a/cursojs/exercicios/aula14ex/ex017/style.css
+++ b/cursojs/exercicios/aula14ex/ex017/style.css
@@ -14,9 +14,36 @@ section{
     background-color: white;
     border-radius: 10px;
     padding: 15px;
-    width: 500px;
+    width: 70vw;
     margin: 0 auto;
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.432);
+
+    & input{
+        font-size: .7em;
+    }
+
+    & button{
+        font-size: .7em;
+        height: 30px; 
+        border: 1px solid black;
+        border-radius: 5px;
+        text-align: center;
+    }
+
+    text-align: center;
+    & #seletab{        
+        height: 310px; width: 400px;
+        margin-top: 10px;
+        border: 2px solid black;
+        border-radius: 5px;
+        font-size: .8em;
+
+        box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.577);
+
+        & option{
+            padding: 5px;
+        }
+    }
 }
 footer{
     text-align: center;
